# no_smoking_server

./: README.md  main.py  pyproject.toml  test.py  track.py
static/: index.html
static/assets/: index-C2fRqT1P.css  index-CCHCNeLk.js  index-DQLgxJ50.css  index-GuNP_aet.js
