[tool.poetry]
name = "no-smoking-server"
version = "0.1.0"
description = "Сервис по детектированию курильщиков в неположенных местах"
authors = ["Azat <az.bilalov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
python-multipart = "^0.0.9"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
ultralytics = "^8.2.2"
aiortc = "^1.8.0"
opencv-python = "^4.9.0.80"
websockets = "^12.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
